test/fail/parse_fn_params_missing_comma.ms
fn test(a: Int32 b: Int32) {
  return a + b;
};
